--- a/app/src/main/res/layout/activity_plan_for_day.xml
+++ b/app/src/main/res/layout/activity_plan_for_day.xml
@@ -48,8 +48,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="15dp"
+        android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         app:layout_constraintVertical_bias="1.0"
-        tools:layout_editor_absoluteX="16dp"></ListView>
+        tools:layout_editor_absoluteX="16dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
