Changed size of layout in MainActivity

--- a/app/src/main/res/layout/row_main_icon_name_check.xml
+++ b/app/src/main/res/layout/row_main_icon_name_check.xml
@@ -22,7 +22,9 @@
         android:layout_column="1"
         android:layout_columnWeight="1"
         android:layout_marginLeft="10dp"
-        android:textColor="#1E90FF"
+        android:gravity="bottom|center|left"
+        android:textAlignment="gravity"
+        android:textColor="@color/black"
         android:textSize="30sp" />
 
     <CheckBox
@@ -31,7 +33,8 @@
         android:layout_height="51dp"
         android:layout_row="0"
         android:layout_column="2"
-        />
+        android:scaleX="2"
+        android:scaleY="2" />
 
 
 </GridLayout>
