-Major changes de designs -Increment in the text sizes -Changed font

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,8 +84,11 @@
         android:id="@+id/topViewTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="5dp"
+        android:fontFamily="@font/ubuntu"
         android:text="@string/top_view_title_text"
+        android:textColor="@color/black"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/view"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="@+id/view"
@@ -95,8 +98,11 @@
         android:id="@+id/topViewTitleEvening"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="5dp"
+        android:fontFamily="@font/ubuntu"
         android:text="@string/top_view_title_text_evening"
+        android:textColor="@color/black"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/view2"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="@+id/view2"
@@ -108,7 +114,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="16dp"
+        android:fontFamily="@font/ubuntu"
         android:text="@string/zero_time"
+        android:textColor="#3F51B5"
         android:textSize="30dp"
         app:layout_constraintEnd_toStartOf="@+id/menu_button3"
         app:layout_constraintTop_toTopOf="parent" />
