--- a/app/src/main/res/layout/activity_medicamentos.xml
+++ b/app/src/main/res/layout/activity_medicamentos.xml
@@ -61,9 +61,11 @@
 
     <TextView
         android:id="@+id/textView13"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_width="80dp"
+        android:layout_height="73dp"
+        android:layout_marginTop="25dp"
+        android:fontFamily="@font/ubuntu"
+        android:gravity="center_horizontal|center_vertical"
         android:text="@string/medicine_name_3"
         android:textColor="@color/black"
         android:textSize="22dp"
@@ -73,9 +75,11 @@
 
     <TextView
         android:id="@+id/textView12"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_width="97dp"
+        android:layout_height="72dp"
+        android:layout_marginTop="25dp"
+        android:fontFamily="@font/ubuntu"
+        android:gravity="center_horizontal|center_vertical"
         android:text="@string/medicine_name_2"
         android:textColor="@color/black"
         android:textSize="22dp"
@@ -121,6 +125,7 @@
         android:layout_width="354dp"
         android:layout_height="65dp"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/ubuntu"
         android:text="@string/previously_medicine_in_plan"
         android:textAllCaps="false"
         android:textColor="#070707"
@@ -142,10 +147,12 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_width="115dp"
+        android:layout_height="69dp"
+        android:layout_marginTop="25dp"
         android:layout_marginEnd="32dp"
+        android:fontFamily="@font/ubuntu"
+        android:gravity="center_horizontal|center_vertical"
         android:text="@string/medicine_name_1"
         android:textColor="@color/black"
         android:textSize="22dp"
@@ -159,6 +166,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/ubuntu"
         android:text="@string/medicine_in_plan"
         android:textColor="@color/black"
         android:textSize="25sp"
@@ -194,6 +202,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="20dp"
+        android:fontFamily="@font/ubuntu"
         android:text="@string/to_take_taken_medicine"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -205,6 +214,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="20dp"
+        android:fontFamily="@font/ubuntu"
         android:text="@string/to_take_taken_medicine"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -218,6 +228,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="20dp"
+        android:fontFamily="@font/ubuntu"
         android:text="@string/to_take_taken_medicine"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
