--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="40dp"
+        android:fontFamily="@font/ubuntu"
         android:text="@string/white_black"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,6 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/ubuntu"
         android:text="@string/notifications"
         android:textColor="@color/black"
         android:textSize="18sp"
@@ -60,6 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
+        android:fontFamily="@font/ubuntu"
         android:text="@string/faq_more_info"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -72,6 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/ubuntu"
         android:text="@string/rate_app"
         android:textColor="@color/black"
         android:textSize="18sp"
@@ -86,6 +90,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/ubuntu"
         android:text="@string/faq"
         android:textColor="@color/black"
         android:textSize="18sp"
@@ -143,6 +148,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
+        android:fontFamily="@font/ubuntu"
         android:text="@string/change_language_more_info"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -163,6 +169,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="30dp"
+        android:fontFamily="@font/ubuntu"
         android:text="@string/portuguese_english"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -174,6 +181,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/ubuntu"
         android:text="@string/register"
         android:textColor="@color/black"
         android:textSize="18sp"
@@ -187,6 +195,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
+        android:fontFamily="@font/ubuntu"
         android:text="@string/register_more_info"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -199,6 +208,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/ubuntu"
         android:text="@string/login"
         android:textColor="@color/black"
         android:textSize="18sp"
@@ -212,6 +222,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
+        android:fontFamily="@font/ubuntu"
         android:text="@string/login_more_info"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -250,6 +261,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="25dp"
+        android:fontFamily="@font/ubuntu"
         android:text="@string/ativate_dark_mode"
         android:textColor="@color/black"
         android:textSize="18sp"
@@ -273,6 +285,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/ubuntu"
         android:text="@string/change_language"
         android:textColor="@color/black"
         android:textSize="18sp"
