--- a/app/src/main/res/layout/row_icons_med_items.xml
+++ b/app/src/main/res/layout/row_icons_med_items.xml
@@ -22,6 +22,7 @@
         android:layout_column="1"
         android:layout_columnWeight="1"
         android:layout_marginLeft="10dp"
+        android:fontFamily="@font/ubuntu"
         android:gravity="center_horizontal|center_vertical"
         android:textColor="#1E90FF"
         android:textSize="24sp" />
