--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -61,6 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
+        android:fontFamily="@font/ubuntu"
         android:text="@string/home"
         android:textAllCaps="true"
         android:textColor="@color/black"
@@ -96,6 +97,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
+        android:fontFamily="@font/ubuntu"
         android:text="@string/med_title"
         android:textAllCaps="true"
         android:textColor="@color/black"
@@ -131,6 +133,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
+        android:fontFamily="@font/ubuntu"
         android:text="@string/add_meds_button"
         android:textAllCaps="true"
         android:textColor="@color/black"
@@ -168,6 +171,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
+        android:fontFamily="@font/ubuntu"
         android:text="@string/settingsText"
         android:textAllCaps="true"
         android:textColor="@color/black"
@@ -206,6 +210,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
+        android:fontFamily="@font/ubuntu"
         android:text="@string/about"
         android:textAllCaps="true"
         android:textColor="@color/black"
