--- a/app/src/main/res/layout/activity_select_med_icon.xml
+++ b/app/src/main/res/layout/activity_select_med_icon.xml
@@ -36,6 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
+        android:fontFamily="@font/ubuntu"
         android:text="@string/select_med_icon"
         android:textColor="@color/black"
         android:textSize="22sp"
