--- a/app/src/main/res/layout/activity_plan_for_day.xml
+++ b/app/src/main/res/layout/activity_plan_for_day.xml
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:fontFamily="@font/ubuntu"
-        android:text="@string/planforday"
+        android:text="@string/plan_for_day"
         android:textColor="@color/black"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
