--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -66,6 +66,7 @@
         android:textAllCaps="true"
         android:textColor="@color/black"
         android:textSize="22sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/view_menu_1"
         app:layout_constraintEnd_toEndOf="@+id/view_menu_1"
         app:layout_constraintStart_toStartOf="@+id/view_menu_1"
@@ -102,6 +103,7 @@
         android:textAllCaps="true"
         android:textColor="@color/black"
         android:textSize="22sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/view_menu_2"
         app:layout_constraintEnd_toEndOf="@+id/view_menu_2"
         app:layout_constraintStart_toStartOf="@+id/view_menu_2"
@@ -138,6 +140,7 @@
         android:textAllCaps="true"
         android:textColor="@color/black"
         android:textSize="22sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/view_menu_3"
         app:layout_constraintEnd_toEndOf="@+id/view_menu_3"
         app:layout_constraintHorizontal_bias="0.501"
@@ -176,6 +179,7 @@
         android:textAllCaps="true"
         android:textColor="@color/black"
         android:textSize="22sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/view_menu_4"
         app:layout_constraintEnd_toEndOf="@+id/view_menu_4"
         app:layout_constraintHorizontal_bias="0.498"
@@ -215,6 +219,7 @@
         android:textAllCaps="true"
         android:textColor="@color/black"
         android:textSize="22sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/view_menu_5"
         app:layout_constraintEnd_toEndOf="@+id/view_menu_5"
         app:layout_constraintStart_toStartOf="@+id/view_menu_5"
