--- a/app/src/main/res/layout/activity_add_medicine.xml
+++ b/app/src/main/res/layout/activity_add_medicine.xml
@@ -226,7 +226,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:fontFamily="@font/ubuntu"
             android:text="@string/med_dose"
             android:textColor="@color/black"
@@ -240,7 +240,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginStart="25dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="25dp"
             android:background="?android:attr/listDivider"
             app:layout_constraintEnd_toEndOf="parent"
@@ -249,10 +249,10 @@
             app:layout_constraintTop_toBottomOf="@+id/textView_add_meds_5" />
 
         <Button
-            android:id="@+id/button2"
-            android:layout_width="159dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="10dp"
+            android:id="@+id/button_add_medicine"
+            android:layout_width="156dp"
+            android:layout_height="75dp"
+            android:layout_marginTop="5dp"
             android:fontFamily="@font/ubuntu"
             android:text="@string/add_medicine"
             android:textSize="18sp"
@@ -341,7 +341,7 @@
             android:id="@+id/editTextTextPersonName2"
             android:layout_width="194dp"
             android:layout_height="41dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="2dp"
             android:layout_marginEnd="20dp"
             android:ems="10"
             android:fontFamily="@font/ubuntu"
