Updated MedicineObject MainActivity & SelectMedicineIcon

--- a/app/src/main/res/layout/row_main_icon_name_check.xml
+++ b/app/src/main/res/layout/row_main_icon_name_check.xml
@@ -35,7 +35,8 @@
         android:layout_row="0"
         android:layout_column="2"
         android:scaleX="2"
-        android:scaleY="2" />
+        android:scaleY="2"
+        android:onClick="onCheckboxClicked"/>
 
 
 </GridLayout>
