--- a/app/src/main/res/layout/activity_plan_for_day.xml
+++ b/app/src/main/res/layout/activity_plan_for_day.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SelectMedIcon">
+    tools:context=".SelectMedicineIcon">
 
     <View
         android:id="@+id/divider_add_meds_"
