--- a/app/src/main/res/layout/activity_medicamentos.xml
+++ b/app/src/main/res/layout/activity_medicamentos.xml
@@ -12,6 +12,7 @@
         android:layout_height="73dp"
         android:layout_marginStart="35dp"
         android:layout_marginTop="24dp"
+        android:clickable="true"
         app:layout_constraintEnd_toStartOf="@+id/textView4"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,6 +25,7 @@
         android:layout_height="73dp"
         android:layout_marginStart="35dp"
         android:layout_marginTop="20dp"
+        android:clickable="true"
         app:layout_constraintEnd_toStartOf="@+id/textView4"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -143,6 +145,7 @@
         android:layout_height="73dp"
         android:layout_marginStart="35dp"
         android:layout_marginTop="24dp"
+        android:clickable="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7"
         app:srcCompat="@mipmap/med2" />
