--- a/app/src/main/res/layout/activity_medsideeffects3.xml
+++ b/app/src/main/res/layout/activity_medsideeffects3.xml
@@ -6,6 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".SelectMedicineIcon">
 
+    <TextView
+        android:id="@+id/textView31"
+        android:layout_width="376dp"
+        android:layout_height="544dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="44dp"
+        android:autoSizeTextType="none"
+        android:fontFamily="@font/ubuntu"
+        android:lineSpacingExtra="14sp"
+        android:text="@string/side_effects_med3"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
     <View
         android:id="@+id/divider_add_meds_"
         android:layout_width="0dp"
