--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -122,6 +122,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
+        android:id="@+id/list2"
         android:layout_width="337dp"
         android:layout_height="219dp"
         app:layout_constraintBottom_toBottomOf="@+id/view2"
